--- a/global_transformations/path_breaker.tex
+++ b/global_transformations/path_breaker.tex
@@ -92,26 +92,26 @@ We define the reduction $\to_\frpb$ (where $\frpb$ stands for \emph{path breaker
 % top boxes
 (0,0)="A";
 "A"+(-5,  0)*{\affr{8}{8}};
-"A"+(-4,  2)*{\aflabelright{\phi}};
+"A"+(-6,  2)*{\aflabelright{f_1(\phi)}};
 "A"+( 5,  0)*{\affr{8}{8}};
-"A"+( 6,  2)*{\aflabelright{\psi}};
+"A"+( 4,  2)*{\aflabelright{g_1(\psi)}};
 % middle boxes
 "A"+"D"="A";
 "A"+(9.5,10)*{\afcjrm{3}{12}};
 "A"+(-9.5,-10)*{\afcjrm{3}{12}};
 "A"+(-5, 0)*{\affr{8}{8}};
-"A"+(-4, 2)*{\aflabelright{\phi}};
+"A"+(-6, 2)*{\aflabelright{f_2(\phi)}};
 "A"+( 5, 0)*{\affr{8}{8}};
-"A"+( 6, 2)*{\aflabelright{\psi}};
+"A"+( 4, 2)*{\aflabelright{g_2(\psi)}};
 % bottom boxes
 "A"+"D"="A";
 "A"+(-5, 0)*{\affr{8}{8}};
-"A"+(-4, 2)*{\aflabelright{\phi}};
+"A"+(-6, 2)*{\aflabelright{f_3(\phi)}};
 "A"+( 5, 0)*{\affr{8}{8}};
-"A"+( 6, 2)*{\aflabelright{\psi}};
+"A"+( 4, 2)*{\aflabelright{g_3(\psi)}};
 }\quad,
 \]
-where the evidenced interaction and cut vertices belong to the same connected component.
+where the evidenced interaction and cut vertices belong to the same connected component, for every upper edge $\epsilon$ in $\boldsymbol\epsilon$ (resp., $\boldsymbol{\epsilon'}$), there are paths in the contractum from $\epsilon$ to $f_1(\epsilon)$, $f_2(\epsilon)$ and $f_3(\epsilon)$ (resp., from $\epsilon$ to $g_1(\epsilon)$, $g_2(\epsilon)$ and $g_3(\epsilon)$), and for every lower edge $\iota$ in $\boldsymbol\iota$ (resp., $\boldsymbol{\iota'}$), there are paths in the contractum from $\iota$ to $f_1(\iota)$, $f_2(\iota)$ and $f_3(\iota)$ (resp., from $\iota$ to $g_1(\iota)$, $g_2(\iota)$ and $g_3(\iota)$).
 \end{definition}
 
 \begin{theorem}\label{theorem:PathBreakerSound}
