--- a/normal_forms.tex
+++ b/normal_forms.tex
@@ -19,7 +19,7 @@ An atomic flow is
 (-22, -6)*{\aflabelleft{\ppl}};
 (-21,-14)*{\afvjm4};
 %-
-( -6, 16)*{\afaidm{}{}{}{}{}{}};
+(  0, 16)*{\afaidmex{}{}{}{}{}{}31};
 ( -4,  8)*{\afvjm8};
 (-11,  8)*{\affr88};
 (-12, 10)*{\aflabelleft{\ppl}};
@@ -31,14 +31,14 @@ An atomic flow is
 ( -4, -8)*{\afvjm8};
 ( -6,-16)*{\afaium{}{}{}{}{}{}};
 %--
-(  6,  8)*{\afaidm{}{}{}{}{}{}};
-(  0, 10)*{\afvjm{12}};
-(  0,  0)*{\affr{10}8};
-( -2,  2)*{\aflabelleft{\pmi}};
-(  0,-10)*{\afvjm{12}};
-( 11,  0)*{\affr88};
-( 10,  2)*{\aflabelleft{\ppl}};
-(  6, -8)*{\afaium{}{}{}{}{}{}};
+(  2,  8)*{\afaidm{}{}{}{}{}{}};
+%(  0, 10)*{\afvjm{12}};
+( -2,  0)*{\affr68};
+( -2,  2)*{\aflabelleft{\ppl}};
+%(  0,-10)*{\afvjm{12}};
+(  7,  0)*{\affr88};
+(  6,  2)*{\aflabelleft{\pmi}};
+(  2, -8)*{\afaium{}{}{}{}{}{}};
 }\qquad
 \atomicflow{
 (-10, 11.5)*{\afvjm4};
