Changed shape of simple form and updated Four Boxes

--- a/normal_forms.tex
+++ b/normal_forms.tex
@@ -19,45 +19,45 @@ An atomic flow is
 (-22, -6)*{\aflabelleft{\ppl}};
 (-21,-14)*{\afvjm4};
 %-
-(  0, 16)*{\afaidmex{}{}{}{}{}{}31};
-( -4,  8)*{\afvjm8};
-(-11,  8)*{\affr88};
+( -3, 16)*{\afaidmex{}{}{}{}{}{}92};
+(-12,  8)*{\affr68};
 (-12, 10)*{\aflabelleft{\ppl}};
-(-16,  0)*{\afcjrm48};
+(-15,  0)*{\afcjrm68};
 %-
-(-16,  0)*{\afcjlm48};
-(-11, -8)*{\affr88};
+(-15,  0)*{\afcjlm68};
+(-12, -8)*{\affr68};
 (-12, -6)*{\aflabelleft{\ppl}};
-( -4, -8)*{\afvjm8};
-( -6,-16)*{\afaium{}{}{}{}{}{}};
+( -3,-16)*{\afaiumex{}{}{}{}{}{}92};
 %--
-(  2,  8)*{\afaidm{}{}{}{}{}{}};
-%(  0, 10)*{\afvjm{12}};
-( -2,  0)*{\affr68};
-( -2,  2)*{\aflabelleft{\ppl}};
-%(  0,-10)*{\afvjm{12}};
-(  7,  0)*{\affr88};
-(  6,  2)*{\aflabelleft{\pmi}};
-(  2, -8)*{\afaium{}{}{}{}{}{}};
+( -1,  8)*{\afaidmex{}{}{}{}{}{}32};
+( -4,  0)*{\affr68};
+( -4,  2)*{\aflabelleft{\ppl}};
+(  6,  8)*{\afvjm8};
+( 10, 10)*{\afvjm{12}};
+(  6,  0)*{\affr{10}8};
+(  5,  2)*{\aflabelleft{\pmi}};
+(  6, -8)*{\afvjm8};
+( 10,-10)*{\afvjm{12}};
+( -1, -8)*{\afaiumex{}{}{}{}{}{}32};
 }\qquad
 \atomicflow{
-(-10, 11.5)*{\afvjm4};
+( -8, 12.75)*{\afvjm{6.5}};
 (  0, 13.5)*{\afawdm{}{}{}{}{}{}};
 %---
-( -8, 5.5)*{\copy\contrup};
-( -5, 5.5)*{\affr{18}8};
+( -6, 5.5)*{\copy\contrup};
+( -4, 5.5)*{\affr{10}8};
 ( -2, 5.5)*{\copy\contrdown};
 %---
-(-10,-2.5)*{\afaium{}{}{}{}{}{}};
+( -5,-2.5)*{\afaium{}{}{}{}{}{}};
 (  0,   0)*{\afvjm3};
-( 10, 2.5)*{\afaidm{}{}{}{}{}{}};
+(  5, 2.5)*{\afaidm{}{}{}{}{}{}};
 %---
 (  2,-5.5)*{\copy\contrup};
-(  5,-5.5)*{\affr{18}8};
-(  8,-5.5)*{\copy\contrdown};
+(  4,-5.5)*{\affr{10}8};
+(  6,-5.5)*{\copy\contrdown};
 %---
 (  0,-13.5)*{\afawum{}{}{}{}{}{}};
-( 10,-11.5)*{\afvjm4};
+(  8,-12.75)*{\afvjm{6.5}};
 }\quad.
 \]
 %---
@@ -75,65 +75,65 @@ An atomic flow is
 (-22, -6)*{\aflabelleft{\ppl}};
 (-21,-14)*{\afvjm4};
 %-
-( -6, 16)*{\afaidm{}{}{}{}{}{}};
-( -4,  8)*{\afvjm8};
-(-11,  8)*{\affr88};
+( -9, 16)*{\afaidmex{}{}{}{}{}{}32};
+(-12,  8)*{\affr68};
 (-12, 10)*{\aflabelleft{\ppl}};
-(-16,  0)*{\afcjrm48};
+(-15,  0)*{\afcjrm68};
 %-
-(-16,  0)*{\afcjlm48};
-(-11, -8)*{\affr88};
+(-15,  0)*{\afcjlm68};
+(-12, -8)*{\affr68};
 (-12, -6)*{\aflabelleft{\ppl}};
-( -4, -8)*{\afvjm8};
-( -6,-16)*{\afaium{}{}{}{}{}{}};
+( -9,-16)*{\afaiumex{}{}{}{}{}{}32};
 %--
-(  2, 10)*{\afvjm{12}};
-( -1,  0)*{\affr88};
-( -2,  2)*{\aflabelleft{\pmi}};
-(  2,-10)*{\afvjm{12}};
+( -6,  8)*{\afvjm8};
+(  0, 10)*{\afvjm{12}};
+( -3,  0)*{\affr88};
+( -3,  2)*{\aflabelleft{\pmi}};
+( -6, -8)*{\afvjm8};
+(  0,-10)*{\afvjm{12}};
 }\qquad
 \atomicflow{
-(-10, 11.5)*{\afvjm4};
+( -8, 12.75)*{\afvjm{6.5}};
 (  0, 13.5)*{\afawdm{}{}{}{}{}{}};
 %---
-( -8, 5.5)*{\copy\contrup};
-( -5, 5.5)*{\affr{18}8};
+( -6, 5.5)*{\copy\contrup};
+( -4, 5.5)*{\affr{10}8};
 ( -2, 5.5)*{\copy\contrdown};
 %---
-(-10,-2.5)*{\afaium{}{}{}{}{}{}};
+( -5,-2.5)*{\afaium{}{}{}{}{}{}};
 (  0,   0)*{\afvjm3};
-( 10, 2.5)*{\afaidm{}{}{}{}{}{}};
+(  5, 2.5)*{\afaidm{}{}{}{}{}{}};
 %---
 (  2,-5.5)*{\copy\contrup};
-(  5,-5.5)*{\affr{18}8};
-(  8,-5.5)*{\copy\contrdown};
+(  4,-5.5)*{\affr{10}8};
+(  6,-5.5)*{\copy\contrdown};
 %---
 (  0,-13.5)*{\afawum{}{}{}{}{}{}};
-( 10,-11.5)*{\afvjm4};
-}\quad;
+(  8,-12.75)*{\afvjm{6.5}};
+}\quad.
 \]
 %---
 \item\label{definition:FlowNormalForms:item:WeaklyStreamlined}
 \emph{weakly streamlined} if it can be represented as
 \[
 \atomicflow{
-(-10, 11.5)*{\afvjm4};
+( -8, 11.5)*{\afvjm4};
 (  0, 13.5)*{\afawdm{}{}{}{}{}{}};
 %---
-( -8, 5.5)*{\copy\contrup};
-( -5, 5.5)*{\affr{18}8};
+( -6, 5.5)*{\copy\contrup};
+( -4, 5.5)*{\affr{10}8};
 ( -2, 5.5)*{\copy\contrdown};
 %---
-(-10,-2.5)*{\afaium{}{}{}{}{}{}};
+( -5,-2.5)*{\afaium{}{}{}{}{}{}};
 (  0,   0)*{\afvjm3};
-( 10, 2.5)*{\afaidm{}{}{}{}{}{}};
+(  5, 2.5)*{\afaidm{}{}{}{}{}{}};
 %---
 (  2,-5.5)*{\copy\contrup};
-(  5,-5.5)*{\affr{18}8};
-(  8,-5.5)*{\copy\contrdown};
+(  4,-5.5)*{\affr{10}8};
+(  6,-5.5)*{\copy\contrdown};
 %---
 (  0,-13.5)*{\afawum{}{}{}{}{}{}};
-( 10,-11.5)*{\afvjm4};
+(  8,-11.5)*{\afvjm4};
 }\quad;
 \]
 %---
@@ -141,23 +141,23 @@ An atomic flow is
 \emph{streamlined} if it can be represented as
 \[
 \atomicflow{
-(-10,11)*{\afvjm3};
+( -5, 11.5)*{\afvjm4};
 %---
-(-15, 5.5)*{\copy\contrup};
-(-10, 5.5)*{\affr{28}8};
-( -5, 5.5)*{\copy\contrdown};
+(-7.5, 5.5)*{\copy\contrup};
+(  -5, 5.5)*{\affr{12}8};
+(-2.5, 5.5)*{\copy\contrdown};
 %---
-(-20,-2.5)*{\afawum{}{}{}{}{}{}};
-(-10,-2.5)*{\afaium{}{}{}{}{}{}};
+(-10,-2.5)*{\afawum{}{}{}{}{}{}};
+( -5,-2.5)*{\afaium{}{}{}{}{}{}};
 (  0,   0)*{\afvjm3};
-( 10, 2.5)*{\afaidm{}{}{}{}{}{}};
-( 20, 2.5)*{\afawdm{}{}{}{}{}{}};
+(  5, 2.5)*{\afaidm{}{}{}{}{}{}};
+( 10, 2.5)*{\afawdm{}{}{}{}{}{}};
 %---
-(  5,-5.5)*{\copy\contrup};
-( 10,-5.5)*{\affr{28}8};
-( 15,-5.5)*{\copy\contrdown};
+(2.5,-5.5)*{\copy\contrup};
+(  5,-5.5)*{\affr{12}8};
+(7.5,-5.5)*{\copy\contrdown};
 %---
-(  10,-11)*{\afvjm3};
+(  5,-11.5)*{\afvjm4};
 }\quad;
 \]
 %---
@@ -165,23 +165,25 @@ An atomic flow is
 \emph{super streamlined} if it can be represented as
 \[
 \atomicflow{
-(-18,8.5)*{\afawum{}{}{}{}};
-( -5, 11)*{\afvjm3};
+(-12,  9.5)*{\afawum{}{}{}{}{}{}};
 %---
-( -8, 5.5)*{\copy\contrup};
-( -5, 5.5)*{\affr{18}8};
+( -4, 11.5)*{\afvjm4};
+%---
+( -6, 5.5)*{\copy\contrup};
+( -4, 5.5)*{\affr{10}8};
 ( -2, 5.5)*{\copy\contrdown};
 %---
-(-10,-2.5)*{\afaium{}{}{}{}{}{}};
+( -5,-2.5)*{\afaium{}{}{}{}{}{}};
 (  0,   0)*{\afvjm3};
-( 10, 2.5)*{\afaidm{}{}{}{}{}{}};
+(  5, 2.5)*{\afaidm{}{}{}{}{}{}};
 %---
 (  2,-5.5)*{\copy\contrup};
-(  5,-5.5)*{\affr{18}8};
-(  8,-5.5)*{\copy\contrdown};
+(  4,-5.5)*{\affr{10}8};
+(  6,-5.5)*{\copy\contrdown};
 %---
-( 5, -11)*{\afvjm3};
-(18,-8.5)*{\afawdm{}{}{}{}};
+(  4,-11.5)*{\afvjm4};
+%---
+( 12, -9.5)*{\afawdm{}{}{}{}{}{}};
 }\quad;\quad\mbox{and}
 \]
 %---
@@ -189,198 +191,129 @@ An atomic flow is
 \emph{hyper streamlined} if it can be represented as
 \[
 \atomicflow{
-(-18,8.5)*{\afawum{}{}{}{}};
-( -5, 11)*{\afvjm3};
+(-12,  9.5)*{\afawum{}{}{}{}{}{}};
 %---
-( -5, 5.5)*{\copy\contrup};
-( -5, 5.5)*{\affr{18}8};
+( -4, 11.5)*{\afvjm4};
 %---
-(-10,-2.5)*{\afaium{}{}{}{}{}{}};
+( -4, 5.5)*{\copy\contrup};
+( -4, 5.5)*{\affr{10}8};
+%---
+( -5,-2.5)*{\afaium{}{}{}{}{}{}};
 (  0,   0)*{\afvjm3};
-( 10, 2.5)*{\afaidm{}{}{}{}{}{}};
+(  5, 2.5)*{\afaidm{}{}{}{}{}{}};
 %---
-(  5,-5.5)*{\affr{18}8};
-(  5,-5.5)*{\copy\contrdown};
+(  4,-5.5)*{\affr{10}8};
+(  4,-5.5)*{\copy\contrdown};
 %---
-( 5, -11)*{\afvjm3};
-(18,-8.5)*{\afawdm{}{}{}{}};
+(  4,-11.5)*{\afvjm4};
+%---
+( 12, -9.5)*{\afawdm{}{}{}{}{}{}};
 }\quad.
 \]
 \end{enumerate}
 \end{definition}
 
-\begin{definition}\label{definition:FlowWeaklyCutFree}
-A weakly streamlined atomic flow with no upper (resp., lower) edges is called \emph{weakly cut-free} (reps., \emph{weakly interaction-free}).
-\end{definition}
-
-\TODO{A streamlined atomic flow with no pair of upper (resp., lower) edges with an $ai$-path between them is cut (resp., axiom) free.}
-
-%---------------------------------------
-\begin{proposition}\label{proposition:FlowStreamlinedNoUpper}
-A streamlined atomic flow with no upper (resp., lower) edges can be represented as
-\[
-\atomicflow{
-( 10,2.5)*{\afaidm{}{}{}{}{}{}};
-( 20,2.5)*{\afawdm{}{}{}{}{}{}};
-%---
-( 12,-5.5)*{\copy\contrup};
-( 15,-5.5)*{\affr{18}8};
-( 18,-5.5)*{\copy\contrdown};
-%---
-(  15,-11)*{\afvjm3};
-}\quad\mbox{and}\quad
-\atomicflow{
-(-15,11)*{\afvjm3};
-%---
-(-18, 5.5)*{\copy\contrup};
-(-15, 5.5)*{\affr{18}8};
-(-12, 5.5)*{\copy\contrdown};
-%---
-(-20,-2.5)*{\afawum{}{}{}{}{}{}};
-(-10,-2.5)*{\afaium{}{}{}{}{}{}};
-}\quad,
-\]
-respectively.
-\end{proposition}
-
-%---------------------------------------
-\begin{proposition}\label{proposition:FlowSuperStreamlinedNoUpper}
-A super streamlined atomic flow with no upper (resp., lower) edges can be represented as
-\[
-\atomicflow{
-( 0,2.5)*{\afaidm{}{}{}{}{}{}};
-%---
-(-2,-5.5)*{\copy\contrup};
-( 0,-5.5)*{\affr88};
-( 2,-5.5)*{\copy\contrdown};
-%---
-( 0,-11)*{\afvjm3};
-( 8,-8.5)*{\afawdm{}{}{}{}};
-}
-\quad\mbox{and}\quad
-\atomicflow{
-(-8,8.5)*{\afawum{}{}{}{}};
-( 0,11)*{\afvjm3};
-%---
-(-2, 5.5)*{\copy\contrup};
-( 0, 5.5)*{\affr88};
-( 2, 5.5)*{\copy\contrdown};
-%---
-( 0,-2.5)*{\afaium{}{}{}{}{}{}};
-}\quad,
-\]
-respectively.
-\end{proposition}
-
-%---------------------------------------
-\begin{proposition}\label{proposition:FlowHyperStreamlinedNoUpper}
-A hyper streamlined atomic flow with no upper (resp., lower) edges can be represented as
-\[
-\atomicflow{
-( 0,2.5)*{\afaidm{}{}{}{}{}{}};
-%---
-( 0,-5.5)*{\affr88};
-( 0,-5.5)*{\copy\contrdown};
-%---
-( 0,-11)*{\afvjm3};
-( 8,-8.5)*{\afawdm{}{}{}{}};
-}
-\quad\mbox{and}\quad
-\atomicflow{
-(-8,8.5)*{\afawum{}{}{}{}};
-( 0,11)*{\afvjm3};
-%---
-( 0, 5.5)*{\copy\contrup};
-( 0, 5.5)*{\affr88};
-%---
-( 0,-2.5)*{\afaium{}{}{}{}{}{}};
-}\quad,
-\]
-respectively.
-\end{proposition}
-
-\TODO{Maybe think of a different name than `simple form' (it doesn't look very simple...).}
-
-%---------------------------------------
-\begin{proposition}\label{proposition:FlowSimpleNoUpper}
-Given a polarity assignment $\pi$, an atomic flow on simple form with respect to $\pi$ with no upper (resp., lower) edges can be represented as
-\[
-\atomicflow{
-( -5,  8)*{\afaidm{}{}{}{}{}{}};
-(-10,  0)*{\affr88};
-(-11,  2)*{\aflabelleft{\ppl}};
-(-10, -6)*{\afvjm4};
-%--
-(  5,  8)*{\afaidm{}{}{}{}{}{}};
-(  0,  0)*{\affr88};
-( -1,  2)*{\aflabelleft{\pmi}};
-( -3, -6)*{\afvjm4};
-( 10,  0)*{\affr88};
-(  9,  2)*{\aflabelleft{\ppl}};
-(  5, -8)*{\afaium{}{}{}{}{}{}};
-}\qquad
-\atomicflow{
-( -5, 13.5)*{\afawdm{}{}{}{}{}{}};
-%---
-( -8, 5.5)*{\copy\contrup};
-( -5, 5.5)*{\affr{18}8};
-( -2, 5.5)*{\copy\contrdown};
-%---
-(-10,-2.5)*{\afaium{}{}{}{}{}{}};
-(  0,   0)*{\afvjm3};
-( 10, 2.5)*{\afaidm{}{}{}{}{}{}};
-%---
-(  2,-5.5)*{\copy\contrup};
-(  5,-5.5)*{\affr{18}8};
-(  8,-5.5)*{\copy\contrdown};
-%---
-(  0,-13.5)*{\afawum{}{}{}{}{}{}};
-( 10,-11.5)*{\afvjm4};
-}\quad\mbox{and}\quad
-\]
-\[
-\atomicflow{
-( -5, -8)*{\afaium{}{}{}{}{}{}};
-(-10,  0)*{\affr88};
-(-11,  2)*{\aflabelleft{\ppl}};
-(-10,  6)*{\afvjm4};
-%--
-(  5, -8)*{\afaium{}{}{}{}{}{}};
-(  0,  0)*{\affr88};
-( -1,  2)*{\aflabelleft{\pmi}};
-( -3,  6)*{\afvjm4};
-( 10,  0)*{\affr88};
-(  9,  2)*{\aflabelleft{\ppl}};
-(  5,  8)*{\afaidm{}{}{}{}{}{}};
-}\qquad
-\atomicflow{
-(-10, 11.5)*{\afvjm4};
-(  0, 13.5)*{\afawdm{}{}{}{}{}{}};
-%---
-( -8, 5.5)*{\copy\contrup};
-( -5, 5.5)*{\affr{18}8};
-( -2, 5.5)*{\copy\contrdown};
-%---
-(-10,-2.5)*{\afaium{}{}{}{}{}{}};
-(  0,   0)*{\afvjm3};
-( 10, 2.5)*{\afaidm{}{}{}{}{}{}};
-%---
-(  2,-5.5)*{\copy\contrup};
-(  5,-5.5)*{\affr{18}8};
-(  8,-5.5)*{\copy\contrdown};
-%---
-(  5,-13.5)*{\afawum{}{}{}{}{}{}};
-}\quad,
-\]
-respectively.
-\end{proposition}
-
-\TODO{Define the inverse of a polarity assignment.}
-
 \begin{proposition}\label{proposition:FlowWeaklyStreamlinedPolarity}
 Given a polarity assignment $\pi$, an atomic flow that is weakly streamlined with respect to both $\pi$ and $\bar\pi$ is weakly streamlined. 
 \end{proposition}
 
-\begin{proposition}\label{proposition:FlowWeaklyCutFreePolarity}
-Given a polarity assignment $\pi$, a weakly streamlined atomic flow with respect to $\pi$ that has no upper (resp., lower) edges is weakly cut-free (resp., weakly identity-free).
+\begin{proposition}\label{proposition:FlowCutFree}
+A streamlined atomic flow with no pair of upper (resp., lower) edges such that there is an $\ai$-path between them, contains no cut (resp., axiom) vertices.
+\end{proposition}
+
+\TODO{Figure out how to stop the flows from looking lopsided (invisiblemark?).}
+
+%---------------------------------------
+\begin{proposition}\label{proposition:FlowNormalFormsNoUpper}
+Given an atomic flow with no upper (resp., lower) edges, it can be represented as
+\begin{enumerate}
+\item\label{proposition:FlowNormalFormsNoUpper:item:Streamlined}
+\[
+\atomicflow{
+(  5, 2.5)*{\afaidm{}{}{}{}{}{}};
+( 10, 2.5)*{\afawdm{}{}{}{}{}{}};
+%---
+(4,-5.5)*{\copy\contrup};
+(6,-5.5)*{\affr{10}8};
+(8,-5.5)*{\copy\contrdown};
+%---
+(6,-11.5)*{\afvjm4};
+}
+\qquad
+\left(\mbox{resp.,}\quad
+\atomicflow{
+(-6,11.5)*{\afvjm4};
+%---
+(-8, 5.5)*{\copy\contrup};
+(-6, 5.5)*{\affr{10}8};
+(-4, 5.5)*{\copy\contrdown};
+%---
+(-10,-2.5)*{\afawum{}{}{}{}{}{}};
+( -5,-2.5)*{\afaium{}{}{}{}{}{}};
+}
+\quad\right)
+\quad,
+\]
+if it is streamlined;
+%---
+\item\label{proposition:FlowNormalFormsNoUpper:item:SuperStreamlined}
+\[
+\atomicflow{
+(  4, 2.5)*{\afaidm{}{}{}{}{}{}};
+%---
+(  2,-5.5)*{\copy\contrup};
+(  4,-5.5)*{\affr88};
+(  6,-5.5)*{\copy\contrdown};
+%---
+(  4,-11.5)*{\afvjm4};
+%---
+( 11, -9.5)*{\afawdm{}{}{}{}{}{}};
+}
+\qquad
+\left(\mbox{resp.,}\quad
+\atomicflow{
+(-11,  9.5)*{\afawum{}{}{}{}{}{}};
+%---
+( -4, 11.5)*{\afvjm4};
+%---
+( -6, 5.5)*{\copy\contrup};
+( -4, 5.5)*{\affr88};
+( -2, 5.5)*{\copy\contrdown};
+%---
+( -4,-2.5)*{\afaium{}{}{}{}{}{}};
+}
+\quad\right)
+\quad,
+\]
+if it is super streamlined; and
+%---
+\item\label{proposition:FlowNormalFormsNoUpper:item:HyperStreamlined}
+\[
+\atomicflow{
+(  4, 2.5)*{\afaidm{}{}{}{}{}{}};
+%---
+(  4,-5.5)*{\affr88};
+(  4,-5.5)*{\copy\contrdown};
+%---
+(  4,-11.5)*{\afvjm4};
+%---
+( 11, -9.5)*{\afawdm{}{}{}{}{}{}};
+}
+\qquad
+\left(\mbox{resp.,}\quad
+\atomicflow{
+(-11,  9.5)*{\afawum{}{}{}{}{}{}};
+%---
+( -4, 11.5)*{\afvjm4};
+%---
+( -4, 5.5)*{\copy\contrup};
+( -4, 5.5)*{\affr88};
+%---
+( -4,-2.5)*{\afaium{}{}{}{}{}{}};
+}
+\quad\right)
+\quad,
+\]
+if it is hyper streamlined.
+\end{enumerate}
 \end{proposition}
