--- a/global_transformations/four_boxes.tex
+++ b/global_transformations/four_boxes.tex
@@ -1,7 +1,7 @@
 \newcommand{\frfb}{{\mathsf{fb}}}
 %---------------------------------------
 \begin{definition}\label{definition:FourBoxes}
-We define the reduction $\to_\frfb$ (where $\frfb$ stands for \emph{four boxes}) as follows, for any atomic flows $\phi$ and $\psi$ that do not contain interaction or cut vertices:
+We define the reduction $\to_\frfb$ (where $\frfb$ stands for \emph{four boxes}) as follows, for any atomic flows $\phi$ and $\psi$ with a polarity assignment $\pi$:
 \[
 \atomicflow{
 (-8, 6)*{\afvjdm4{\boldsymbol{\epsilon}}{}};
@@ -9,8 +9,10 @@ We define the reduction $\to_\frfb$ (where $\frfb$ stands for \emph{four boxes})
 ( 8, 6)*{\afvjdm4{}{\boldsymbol{\epsilon'}}};
 %-
 (-5, 0)*{\affr88};
+(-6, 2)*{\aflabelleft\ppl};
 (-4, 2)*{\aflabelright\phi};
 ( 5, 0)*{\affr88};
+( 4, 2)*{\aflabelleft\pmi};
 ( 6, 2)*{\aflabelright\psi};
 %-
 (-8,-6)*{\afvjum4{\boldsymbol{\iota}}{}};
@@ -19,51 +21,50 @@ We define the reduction $\to_\frfb$ (where $\frfb$ stands for \emph{four boxes})
 }
 \quad\to_\frfb\quad
 \atomicflow{
-%left
-(-27, 8)*{\afawdm{}{}{}{}};
+%one
+(-27, 8)*{\afawdm{}{}{\boldsymbol{\epsilon_1}}{}};
 (-19,16)*{\afvjdm8{\boldsymbol{\epsilon}}{}};
 (-19, 8)*{\afacum{}{}{}{}{}{}};
 (-24, 0)*{\affr88};
 (-20, 2)*{\aflabelleft{f_1(\phi)}};
-(-27,-8)*{\afawum{}{}{}{}};
+(-27,-8)*{\afawum{}{}{\boldsymbol{\iota_1}}{}};
 (-19,-8)*{\afacdm{}{}{}{}{}{}};
 (-19,-16)*{\afvjum8{\boldsymbol{\iota}}{}};
-%top
-(-15,18)*{\afawdm{}{}{}{\boldsymbol{\tilde\epsilon}}};
-( -7,18)*{\afaidnw{}{}};
-( -9,16)*{\afvjm4};
-( -2,15)*{\afcjlm66};
+%two
+(-15,18)*{\afawdm{}{}{\boldsymbol{\epsilon_2}}{}};
+(  0,18)*{\afaidmex{}{}{}{}{}{}92};
 (-12,10)*{\affr88};
 ( -8,12)*{\aflabelleft{f_2(\phi)}};
 (-16, 1)*{\afcjrm2{10}};
 ( -9, 2)*{\afawum{}{}{}{}};
-%bot
+%three
 (-16,-1)*{\afcjlm2{10}};
 ( -9,-2)*{\afawdm{}{}{}{}};
 (-12,-10)*{\affr88};
 ( -8, -8)*{\aflabelleft{f_3(\phi)}};
-( -9,-16)*{\afvjm4};
-( -2,-15)*{\afcjrm66};
-( -7,-20)*{\afaiunw{}{}};
-(-15,-18)*{\afawum{}{}{}{\boldsymbol{\tilde\iota}}};
-%center
-(-3, 12)*{\afvjdm{16}{}{\boldsymbol{\epsilon'}}};
-( 3,  8)*{\afacdm{}{}{}{}{}{}};
-( 7, 12)*{\afaidnw{}{}};
-( 0,  0)*{\affr88};
-( 4,  2)*{\aflabelleft{g(\psi)}};
-( 7,-14)*{\afaiunw{}{}};
-( 3, -8)*{\afacum{}{}{}{}{}{}};
-(-3,-12)*{\afvjum{16}{}{\boldsymbol{\iota'}}};
-%right
-(15, 8)*{\afawdm{}{}{}{\boldsymbol{\hat\epsilon}}};
-( 9, 8)*{\afvjm8};
-(12, 0)*{\affr88};
-(16, 2)*{\aflabelleft{f_4(\phi)}};
-( 9,-8)*{\afvjm8};
-(15,-8)*{\afawum{}{}{}{\boldsymbol{\hat\iota}}};
-}\quad.
+(  0,-18)*{\afaiumex{}{}{}{}{}{}92};
+(-15,-18)*{\afawum{}{}{\boldsymbol{\iota_3}}{}};
+%four
+(-5, 8)*{\afawdm{}{}{\boldsymbol{\epsilon_4}}{}};
+( 1, 8)*{\afvjm8};
+(-2, 0)*{\affr88};
+( 2, 2)*{\aflabelleft{f_4(\phi)}};
+( 1,-8)*{\afvjm8};
+(-5,-8)*{\afawum{}{}{\boldsymbol{\iota_4}}{}};
+%psi
+(13, 12)*{\afvjdm{16}{}{g(\boldsymbol{\epsilon'})}};
+( 9, 13)*{\afvjm2};
+( 7,  8)*{\afacdm{}{}{}{}{}{}};
+( 3, 12)*{\afaidnw{}{}};
+(10,  0)*{\affr88};
+(14,  2)*{\aflabelleft{g(\psi)}};
+( 3,-14)*{\afaiunw{}{}};
+( 7, -8)*{\afacum{}{}{}{}{}{}};
+( 9,-13)*{\afvjm2};
+(13,-12)*{\afvjum{16}{}{g(\boldsymbol{\iota'})}};
+}\quad,
 \]
+where $\boldsymbol{\epsilon_1}=f_1(\boldsymbol\epsilon)$, $\boldsymbol{\iota_1}=f_1(\boldsymbol\iota)$, $\boldsymbol{\epsilon_2}=f_2(\boldsymbol\epsilon)$, $\boldsymbol{\iota_3}=f_3(\boldsymbol\iota)$, $\boldsymbol{\epsilon_4}=f_4(\boldsymbol\epsilon)$ and $\boldsymbol{\iota_4}=f_4(\boldsymbol\iota)$, and for every $\epsilon$ in $\boldsymbol\epsilon$ (resp., $\iota$ in $\boldsymbol\iota$) there is a path from $\epsilon$ (resp., $\iota$) to $f_1(\epsilon)$ and $f_3(\epsilon)$ (resp., $f_1(\iota)$ and $f_2(\iota)$).
 \end{definition}
 
 %---------------------------------------
@@ -77,11 +78,11 @@ Let $\Phi$ be a derivation with flow $\phi'$, such that $\phi'\to_\frfb\psi'$. W
 
 We obtain $\Psi$, with atomic flow $\psi'$, from $\Phi$ by, for every atom occurrence $a^\phi$ in $\Phi$:
 \begin{enumerate}
-	\item If $a^\phi$ is not in the premiss or conclusion of $\Phi$, substitute it with the formula
-	\[
-	 \vls([a^{f_1(\phi)}.a^{f_2(\phi)}].[a^{f_3(\phi)}.a^{f_4(\phi)}])\quad.
-	\]
-	\item If $a^\phi$ is in the premiss or conclusion of $\Phi$, substitute it with the derivation
+\item If $a^\phi$ is not in the premiss or conclusion of $\Phi$, substitute it with the formula
+\[
+ \vls([a^{f_1(\phi)}.a^{f_2(\phi)}].[a^{f_3(\phi)}.a^{f_4(\phi)}])\quad.
+\]
+\item If $a^\phi$ is in the premiss or conclusion of $\Phi$, substitute it with the derivation
 \[
 \vlinf{}{}
 {
@@ -118,7 +119,7 @@ We obtain $\Psi$, with atomic flow $\psi'$, from $\Phi$ by, for every atom occur
 \quad,
 \]
 respectively.
-	\item Substitute rule instances $\vlinf{}{}{\vls[a^\phi.\bar a^\psi]}{\ttt}$ and $\vlinf{}{}{\fff}{\vls(a^\phi.\bar a^\psi)}$ with the derivations
+\item Substitute rule instances $\vlinf{}{}{\vls[a^\phi.\bar a^\psi]}{\ttt}$ and $\vlinf{}{}{\fff}{\vls(a^\phi.\bar a^\psi)}$ with the derivations
 \[
 \vlderivation
 {
@@ -144,58 +145,39 @@ respectively.
 }\quad,
 \]
 respectively.
-	\item Substitute rule instances $\acd$, $\acu$, $\awd$, $\awu$ which apply to $a^\phi$ with $\cod$, $\cou$, $\wed$, $\weu$, respectively, applied to $\vls\vlsmallbrackets([a^{f_1(\phi)}.a^{\phi_2}].[a^{f_3(\phi)}.a^{f_4(\phi)}])$.
+\item Substitute rule instances $\acd$, $\acu$, $\awd$, $\awu$ which apply to $a^\phi$ with $\cod$, $\cou$, $\wed$, $\weu$, respectively, applied to $\vls\vlsmallbrackets([a^{f_1(\phi)}.a^{\phi_2}].[a^{f_3(\phi)}.a^{f_4(\phi)}])$.
 \end{enumerate}
 \end{proof}
 
-\TODO{Make a proposition? Rephrase?}
-
-\begin{lemma}\label{lemma:FourBoxesSize}
-For any two atomic flows $\phi$ and $\psi$ such that $\phi\to_\frfb\psi$ the size of $\psi$ is at most four times the size of $\phi$.
+\begin{lemma}\label{lemma:FourBoxesSimpleForm}
+Given two atomic flows $\phi$ and $\psi$ and a polarity assignment $\pi$, such that $\phi\to_\frfb\psi$, then $\psi$ is on simple form with respect to $\pi$.
 \end{lemma}
 
+\begin{proof}
+By Definition~\vref{definition:FlowNormalForms} and Definition~\vref{definition:FourBoxes}.
+\end{proof}
+
+\newcommand{\Simpl}{\mathsf{Simpl}}
+\begin{definition}\label{definition:DerSimpleForm}
+Given a derivation $\Phi$ with atomic flow $\phi$ and a polarity assignment $\pi$, let $\Psi$ with atomic flow $\psi$ be the derivation obtained in the proof of Theorem~\ref{theorem:SoundFourBoxes}, such that $\phi\to_\frfb\psi$, then we say that $\Psi$ is \emph{the simple form of $\Phi$ with respect to $\pi$}, denoted $\Simpl(\Phi,\pi)$.
+\end{definition}
+
 \begin{lemma}\label{lemma:FourBoxesStreamlining}
-Given a polarity assignment $\pi$, and two atomic flows $\phi$ and $\psi$ such that $\phi\to_\frfb\psi$ and $\phi$ is weakly streamlined with respect to $\pi$ then $\psi$ is weakly streamlined with respect to $\pi$.
+Given two atomic flows $\phi$ and $\psi$ with polarity assignment $\pi$, such that $\phi\to_\frfb\psi$ and $\phi$ is weakly streamlined with respect to $\bar\pi$ then $\psi$ is weakly streamlined with respect to $\bar\pi$.
 \end{lemma}
 
 \begin{proof}
 By studying the atomic flows in Definition~\vref{definition:FourBoxes} we can observe that for every path from an interaction vertex to a cut vertex in $\psi$ there is a path from an interaction vertex to a cut vertex in $\phi$ with the same polarity assignment.
 \end{proof}
 
-\begin{lemma}\label{lemma:FlowExistsSimpleForm}
-Given an atomic flow $\phi$ and a polarity assignment $\pi$ there exists an atomic flow $\psi$, which is on simple form with respect to $\pi$, such that $\phi\to_\frfb\psi$.
-\end{lemma}
-
-\begin{proof}
-Since we can represent $\phi$ with polarity assignment $\pi$ as follows:
-\[
-\atomicflow{
-(-8, 6)*{\afvjdm4{\boldsymbol{\epsilon}}{}};
-( 0, 8)*{\afaidm{}{}{}{}{}{}};
-( 8, 6)*{\afvjdm4{}{\boldsymbol{\epsilon'}}};
-%-
-(-5, 0)*{\affr88};
-(-6, 2)*{\aflabelleft\ppl};
-( 5, 0)*{\affr88};
-( 4, 2)*{\aflabelleft\pmi};
-%-
-(-8,-6)*{\afvjum4{\boldsymbol{\iota}}{}};
-( 0,-8)*{\afaium{}{}{}{}{}{}};
-( 8,-6)*{\afvjum4{}{\boldsymbol{\iota'}}};
-}\quad.
-\]
-It is routine to check Definition~\vref{definition:FlowSimpleForm} and Definition~\vref{definition:FourBoxes} to verify that $\psi$ is on simple form with respect to $\pi$.
-\end{proof}
-
-\TODO{Reread this:}
-
-\newcommand{\Simpl}{\mathsf{Simpl}}
-\begin{definition}\label{definition:TheSimpleForm}
-Given an atomic flow $\phi$ and a polarity assignment $\pi$, let $\psi$ be the atomic flow obtained in the proof of Lemma~\vref{lemma:FlowExistsSimpleForm}, such that $\phi\to_\frfb\psi$ and $\psi$ is on simple form with respect to $\pi$, then we say that $\psi$ is \emph{the simple form of $\phi$ with respect to $\pi$}, denoted $\Simpl(\phi,\pi)$. If $\phi$ is the atomic flow of the derivation $\Phi$ and $\psi$ is the atomic flow of the derivation $\Psi$, then we say that $\Psi$ is \emph{the simple form of $\Phi$ with respect to $\pi$}, denoted $\Simpl(\Phi,\pi)$.
-\end{definition}
-
 \TODO{Check:}
 
 \begin{remark}\label{remark:FourBoxesDestroySimpleForm}
 Given an atomic flow $\phi$ and a polarity assignment $\pi$, such that $\phi$ is not weakly streamlined with respect to $\bar\pi$, then $\Simpl(\phi,\pi)$ is not on simple form with respect to $\bar\pi$.
 \end{remark}
+
+\TODO{Rephrase:}
+
+\begin{lemma}\label{lemma:FourBoxesSize}
+For any two atomic flows $\phi$ and $\psi$ such that $\phi\to_\frfb\psi$ the size of $\psi$ is at most four times the size of $\phi$.
+\end{lemma}
